--- a/build.gradle
+++ b/build.gradle
@@ -25,23 +25,60 @@ repositories {
 }
 
 dependencies {
+    // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.projectlombok:lombok'
+
+    compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.javassist:javassist:3.15.0-GA'
+
+    // 구글 메일
+    implementation 'javax.mail:mail:1.4.7'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    // Redis 추가
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    // Spring Context Support
+    implementation 'org.springframework:spring-context-support:5.3.9'
+
+    // validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // Spring Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-crypto' // 벌크 추가
+
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     // AWS S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation 'software.amazon.awssdk:s3:2.20.99'
+    implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
 
     // MariaDB JDBC driver
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.5'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation group: 'net.jthink', name: 'jaudiotagger', version: '3.0.1'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+    implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
+
+    // 벌크 관련
+    implementation 'org.apache.commons:commons-csv:1.10.0'
+    implementation platform('software.amazon.awssdk:bom:2.25.60')
+
 }
 
 tasks.named('test') {
