--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,55 @@
 # Spring Boot
 spring.application.name=deol-spring
 
-#profile
+# profile: ????? aws ??? ??(=RDS/S3? ??)
 spring.profiles.include=aws
 
-#AWS
+# AWS
 cloud.aws.region.static=ap-northeast-2
 
-# JPA
+# JPA (??)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
+# JWT (?? ?? - ????? ?? ??)
+jwt.secret=YQzV5TjNvQ1BhUk56bXY0QjM2eHdtRklLbk5XVGtQSkA=
+jwt.token-validity-in-seconds=86400
+jwt.refresh-token-validity-in-seconds=604800
+
+# SMTP (?? ?? ????? ??!)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=deolstreaming@gmail.com
+spring.mail.password=rmeeqjkcfcnqdisa
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+spring.mail.properties.mail.smtp.timeout=20000
+spring.mail.properties.mail.smtp.connectiontimeout=20000
+spring.mail.properties.mail.smtp.writetimeout=20000
+
+# Redis (Spring Boot 3.x ?? ?)
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# Swagger (??? ? aws ????? ???)
+
+
+# Multipart
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=300MB
+
+# Storage
+app.storage=s3
+app.s3.bucket=deol-spring-s3
 
 #logging.level.root=DEBUG
-#
 #logging.level.org.springframework=DEBUG
