--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,8 @@ out/
 # Secrets / Env (무시)
 # ---------------------------
 # Spring 설정 실제 파일(민감값 포함 가능)
-src/main/resources/application.properties
-src/main/resources/application-aws.properties
+#src/main/resources/application.properties
+#src/main/resources/application-aws.properties
 
 # 환경변수 파일
 #.env
