--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -16,8 +16,9 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
 # Redis (Spring Boot 3.x ?? ?)
-spring.data.redis.host=localhost
+spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
+spring.data.redis.timeout=2000
 
 # AWS (?? ??? ???? ????? ?? ??)
 cloud.aws.s3.bucket=deol-spring-s3
